# bucklet

./: .coverage  .editorconfig  .gitignore  ARCHITECTURE.md  LICENSE  README.md  TEMP_README.md  migrate_config.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/archy/: __init__.py  __main__.py  cli.py  config.py  errors.py  formatting.py  models.py  rclone.py  s3.py  service.py  storage.py
src/archy/tui/: __init__.py  app.py  screens.py
src/bucklet/: __init__.py  __main__.py  cli.py  config.py  errors.py  formatting.py  models.py  rclone.py  s3.py  service.py  storage.py  tree.py
src/bucklet/tui/: __init__.py  app.py  screens.py
tests/: conftest.py  test_cli.py  test_config.py  test_formatting.py  test_models.py  test_rclone.py  test_s3.py  test_service.py  test_storage.py  test_tree.py  test_tui.py
